code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_python-3.snap
---
source: code-blocks-server/tests/test_api.rs
expression: "code_blocks_server::move_block(MoveBlockArgs {\n            queries: get_query_strings(SupportedLanguage::Python),\n            text: r#\"\n        @decor1\n        @decor2\n        class A:\n            ...\n           \n        class C:\n            \"\"\"class docstring\"\"\"\n        \n            #Vsrc\n            def __init__(self):\n                pass\n        \n            #Vdst\n            @staticmethod()\n            def foo():\n                \"\"\"method docstring\"\"\"\n                \n            def bar():\n                ...\n                \n        def func():\n            ...\n\"#.to_string(),\n            language: SupportedLanguage::Python,\n            src_block: src_block.into(),\n            dst_block: dst_block.into(),\n        }).unwrap()"
---

        @decor1
        @decor2
        class A:
            ...
           
        class C:
            """class docstring"""
        
            #Vsrc
            #Vdst
            @staticmethod()
            def foo():
                """method docstring"""
                
            def __init__(self):
                pass
                
            def bar():
                ...
                
        def func():
            ...

