code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_python-4.snap
---
source: code-blocks-server/tests/test_api.rs
expression: "code_blocks_server::move_block(MoveBlockArgs {\n                queries: get_query_strings(SupportedLanguage::Python),\n                text: r#\"\n        @decor1\n        @decor2\n        class A:\n            ...\n           \n        class C:\n            \"\"\"class docstring\"\"\"\n        \n            def __init__(self):\n                pass\n        \n            #Vsrc\n            @staticmethod()\n            def foo():\n                \"\"\"method docstring\"\"\"\n                \n            def bar():\n                ...\n                \n        #Vfail\n        def func():\n            ...\n\"#.to_string(),\n                language: SupportedLanguage::Python,\n                src_block: src_block.into(),\n                dst_block: fail_block.into(),\n            }).err().unwrap()"
---
Can't move items to different scopes
