code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_python.snap
---
source: code-blocks-server/tests/test_api.rs
expression: snapshot
---

        #Vsrc
        #Vdst
        class C:
            """class docstring"""
        
            def __init__(self):
                pass
        
            @staticmethod()
            def foo():
                """method docstring"""
                
            def bar():
                ...
                
        @decor1
        @decor2
        class A:
            ...
                
        def func():
            ...


New src start:377
