code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_rs-10.snap
---
source: code-blocks-server/tests/test_api.rs
expression: snapshot
---
input:

    mod m1 {
/*  ^dst */
        fn foo() {}
    }

    mod m2 {
        fn bar() {}
    }

    #[cfg(test)]
    #[test]
    /// a test module
    #[ignore]
    mod m3 {
/*  ^src */
        fn baz() {}
    }

---
output:

    mod m1 {
    ^ Dest
/*  ^dst */
        fn foo() {}
    }

    #[cfg(test)]
    ^ Source
    #[test]
    /// a test module
    #[ignore]
    mod m3 {
/*  ^src */
        fn baz() {}
    }

    mod m2 {
        fn bar() {}
    }
