code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_rs-3.snap
---
source: code-blocks-server/tests/test_api.rs
expression: snapshot
---
input:

mod m {
    fn foo() {}
 /* ^src */

    fn bar() {}}
 /* ^dst */

fn baz() {}

---
output:

mod m {
 /* ^src */

    fn bar() {}
    ^ Dest

    fn foo() {}}
    ^ Source
 /* ^dst */

fn baz() {}
