code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_rs-4.snap
---
source: code-blocks-server/tests/test_api.rs
expression: "code_blocks_server::move_block(MoveBlockArgs {\n                queries: get_query_strings(SupportedLanguage::Rust),\n                text: r#\"\n    mod m {\n        fn foo() {}\n     /* ^src */\n    }\n\n    fn baz() {}\n/*  ^fail */\n\"#.to_string(),\n                language: SupportedLanguage::Rust,\n                src_block: src_block.into(),\n                dst_block: fail_block.into(),\n            }).err().unwrap()"
---
Can't move items to different scopes
