code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_rs-6.snap
---
source: code-blocks-server/tests/test_api.rs
expression: snapshot
---

    fn foo() {}

    fn baz() {}
 /* ^dst */

    fn bar() {}
 /* ^src */


New src start: 22
New dst start: 5
