code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_rs.snap
---
source: code-blocks-server/tests/test_api.rs
expression: snapshot
---

    fn bar() {}

    fn foo() {
 /* ^src */
        fn in_foo() {
            bar();
        }
    }
 /* ^dst */


New src start:101
